<resources>
    <string name="app_name">miao</string>
    <string name="focus">关注</string>
    <string name="fans">粉丝</string>
    <string name="catcyc">猫圈</string>
    <string name="n1">4</string>
    <string name="n2">2</string>
    <string name="n3">0</string>
    <string name="myinfo">个人信息</string>
    <string name="myfoucs">我的关注</string>
    <string name="mysetting">设置</string>
    <string name="aboutus">关于我们</string>
    <string name="github_url">https://github.com/android-app-development-course/Meow</string>
    <string name="share_title">Meow</string>
    <string name="login_activity_title" />

    <!-- LoginActivity -->
    <string name="login_activity_log_in_text_view_text">登陆</string>
    <string name="login_activity_welcome_back_text_view_text">欢迎回来!</string>
    <string name="login_activity_input_nickname_edit_text_hint">Your name</string>
    <string name="login_activity_input_password_edit_text_hint">Your password</string>
    <string name="login_activity_login_button_text">登陆</string>
    <string name="login_activity_forgot_your_password_button_text">密码错误，请重新输入</string>
    <string name="login_activity_no_account">没有我们的账号？</string>
    <string name="login_activity_sign_up_button_text">注册</string>

    <!-- SignupActivity -->
    <string name="signup_activity_title"></string>
    <string name="signup_activity_sign_up_text_view_text">注册</string>
    <string name="signup_activity_welcome_text_view_text">欢迎加入我们!</string>
    <string name="signup_activity_signup_nickname_edit_text_hint">Your name</string>
    <string name="signup_activity_signup_space_edit_text_hint">Your mail</string>
    <string name="signup_activity_signup_password_edit_text_hint">Password (6+ characters)</string>
    <string name="signup_activity_i_agree_with_interga_text_view_text">我同意用户使用条款</string>
    <string name="signup_activity_sign_up_button_text">注册</string>
    <string name="signup_activity_already_gave_up_your_text_view_text">已有账号？</string>
    <string name="signup_activity_log_in_button_text">登陆</string>

</resources>
