<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signup_activity_signup_constraint_layout_background_color">

    <TextView
        android:id="@+id/sign_up_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/signup_activity_sign_up_text_view_margin_top"
        android:fontFamily="@font/fzltxh"
        android:gravity="center"
        android:letterSpacing="-0.05"
        android:text="@string/signup_activity_sign_up_text_view_text"
        android:textColor="@color/signup_activity_sign_up_text_view_text_color"
        android:textSize="@dimen/signup_activity_sign_up_text_view_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/signup_activity_welcome_text_view_margin_top"
        android:fontFamily="@font/fzltxh"
        android:gravity="center"
        android:text="@string/signup_activity_welcome_text_view_text"
        android:textColor="@color/signup_activity_welcome_text_view_text_color"
        android:textSize="@dimen/signup_activity_welcome_text_view_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_text_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_up_fields_constraint_layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/signup_activity_sign_up_fields_constraint_layout_height"
        android:layout_marginEnd="@dimen/signup_activity_sign_up_fields_constraint_layout_margin_end"
        android:layout_marginStart="@dimen/signup_activity_sign_up_fields_constraint_layout_margin_start"
        android:layout_marginTop="@dimen/signup_activity_sign_up_fields_constraint_layout_margin_top"
        android:background="@drawable/signup_activity_sign_up_fields_constraint_layout_background"
        app:layout_constraintHorizontal_weight="0.89"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_view"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="273dp">

        <EditText
            android:id="@+id/signup_username_edit_text"
            android:layout_width="0dp"
            android:layout_height="@dimen/signup_activity_signup_nickname_edit_text_height"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="@dimen/signup_activity_signup_nickname_edit_text_margin_top"
            android:layout_marginRight="16dp"
            android:background="@color/signup_activity_signup_nickname_edit_text_background_color"
            android:fontFamily="@font/fzltxh"
            android:gravity="start|center_vertical"
            android:hint="@string/signup_activity_signup_nickname_edit_text_hint"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:maxLines="1"
            android:textColor="@color/signup_activity_signup_nickname_edit_text_text_color"
            android:textColorHint="@color/default_hint"
            android:textSize="@dimen/signup_activity_signup_nickname_edit_text_text_size"
            app:layout_constraintHorizontal_weight="0.9"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/separator_constraint_layout"
            android:layout_width="0dp"
            android:layout_height="@dimen/signup_activity_separator_constraint_layout_height"
            android:layout_marginTop="@dimen/signup_activity_separator_constraint_layout_margin_top"
            android:alpha="0.1"
            android:background="@color/signup_activity_separator_constraint_layout_background_color"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_username_edit_text"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="50dp"/>

        <EditText
            android:id="@+id/signup_mail_edit_text"
            android:layout_width="0dp"
            android:layout_height="@dimen/signup_activity_signup_space_edit_text_height"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="@dimen/signup_activity_signup_space_edit_text_margin_top"
            android:layout_marginRight="16dp"
            android:background="@color/signup_activity_signup_space_edit_text_background_color"
            android:fontFamily="@font/fzltxh"
            android:gravity="start|center_vertical"
            android:hint="@string/signup_activity_signup_space_edit_text_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/signup_activity_signup_space_edit_text_text_color"
            android:textColorHint="@color/default_hint"
            android:textSize="@dimen/signup_activity_signup_space_edit_text_text_size"
            app:layout_constraintHorizontal_weight="0.9"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator_constraint_layout" />

        <View
            android:id="@+id/separator_two_constraint_layout"
            android:layout_width="0dp"
            android:layout_height="@dimen/signup_activity_separator_two_constraint_layout_height"
            android:layout_marginTop="@dimen/signup_activity_separator_two_constraint_layout_margin_top"
            android:alpha="0.1"
            android:background="@color/signup_activity_separator_two_constraint_layout_background_color"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_mail_edit_text"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="101dp"/>

        <EditText
            android:id="@+id/signup_password_edit_text"
            android:layout_width="0dp"
            android:layout_height="@dimen/signup_activity_signup_password_edit_text_height"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="@dimen/signup_activity_signup_password_edit_text_margin_top"
            android:background="@color/signup_activity_signup_password_edit_text_background_color"
            android:fontFamily="@font/fzltxh"
            android:gravity="start|center_vertical"
            android:hint="@string/signup_activity_signup_password_edit_text_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/signup_activity_signup_password_edit_text_text_color"
            android:textColorHint="@color/default_hint"
            android:textSize="@dimen/signup_activity_signup_password_edit_text_text_size"
            app:layout_constraintHorizontal_weight="0.9"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator_two_constraint_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tos_constraint_layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/signup_activity_tos_constraint_layout_height"
        android:layout_marginEnd="@dimen/signup_activity_tos_constraint_layout_margin_end"
        android:layout_marginStart="@dimen/signup_activity_tos_constraint_layout_margin_start"
        android:layout_marginTop="@dimen/signup_activity_tos_constraint_layout_margin_top"
        app:layout_constraintHorizontal_weight="0.87"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_fields_constraint_layout"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="440dp">

        <TextView
            android:id="@+id/i_agree_with_interga_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/fzltxh"
            android:gravity="start"
            android:text="@string/signup_activity_i_agree_with_interga_text_view_text"
            android:textColor="@color/signup_activity_i_agree_with_interga_text_view_text_color"
            android:textSize="@dimen/signup_activity_i_agree_with_interga_text_view_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/agree_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:theme="@style/SignupActivityAgreeSwitchTheme"
            android:thumbTint="@color/signup_activity_agree_switch_thumb_tint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/sign_up_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="@dimen/signup_activity_sign_up_button_height"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="@dimen/signup_activity_sign_up_button_margin_bottom"
        android:background="@drawable/signup_activity_sign_up_button_ripple"
        android:gravity="center"
        android:orientation="horizontal"
        android:onClick="jumptomain"
        app:layout_constraintBottom_toTopOf="@+id/log_in_constraint_layout"
        app:layout_constraintHorizontal_weight="0.89"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/signup_activity_sign_up_button_image_padding"
            android:fontFamily="@font/fzltxh"
            android:gravity="center"
            android:text="@string/signup_activity_sign_up_button_text"
            android:textColor="@color/signup_activity_sign_up_button_text_color"
            android:textSize="@dimen/signup_activity_sign_up_button_text_size" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/log_in_constraint_layout"
        android:layout_width="@dimen/signup_activity_log_in_constraint_layout_width"
        android:layout_height="@dimen/signup_activity_log_in_constraint_layout_height"
        android:layout_marginBottom="@dimen/signup_activity_log_in_constraint_layout_margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="629dp">

        <TextView
            android:id="@+id/already_gave_up_your_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/signup_activity_already_gave_up_your_text_view_margin_bottom"
            android:layout_marginStart="@dimen/signup_activity_already_gave_up_your_text_view_margin_start"
            android:gravity="center"
            android:text="@string/signup_activity_already_gave_up_your_text_view_text"
            android:fontFamily="@font/fzltxh"
            android:textColor="@color/signup_activity_already_gave_up_your_text_view_text_color"
            android:textSize="@dimen/signup_activity_already_gave_up_your_text_view_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="0dp"/>

        <Button
            android:id="@+id/log_in_button"
            android:layout_width="@dimen/signup_activity_log_in_button_width"
            android:layout_height="@dimen/signup_activity_log_in_button_height"
            android:layout_marginBottom="@dimen/signup_activity_log_in_button_margin_bottom"
            android:layout_marginEnd="@dimen/signup_activity_log_in_button_margin_end"
            android:fontFamily="@font/fzltxh"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/signup_activity_log_in_button_text"
            android:textColor="@color/signup_activity_log_in_button_text_color"
            android:textSize="@dimen/signup_activity_log_in_button_text_size"
            android:onClick="jumptologin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="0dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/signup_activity_toolbar_background_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        android:textColor="@color/signup_activity_i_agree_with_interga_text_view_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tos_constraint_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>